Prevent film posters from getting smooshed on small screens

--- a/components/FilmPoster.module.scss
+++ b/components/FilmPoster.module.scss
@@ -1,6 +1,7 @@
 .wrapper {
   position: relative;
   overflow: hidden;
+  flex-shrink: 0;
 }
 
 .innerWrapper {
